--- a/css/profile.css
+++ b/css/profile.css
@@ -161,7 +161,7 @@ header {
 
 
 /* Organizational Structure */
-.struc-org {
+.org-struc {
     font-family: Roboto;
     margin: 30px auto auto 66px;
 }
