--- a/css/style.css
+++ b/css/style.css
@@ -1535,6 +1535,10 @@ footer .address {
         width: 90%;
     }
     /* End Profile */
+    
+    
+    
+    /* ================================================================================================================== */
 
 
 
